--- a/arch/Kconfig
+++ b/arch/Kconfig
@@ -524,6 +524,7 @@ config LTO_CLANG
 	depends on !KASAN
 	depends on CC_IS_CLANG && LD_IS_LLD
 	select LTO
+	select HAVE_LD_DEAD_CODE_DATA_ELIMINATION
 	select LD_DEAD_CODE_DATA_ELIMINATION
 	help
           This option enables clang's Link Time Optimization (LTO), which allows
