Revert "sched: Boost vip task in none-migt"
This reverts commit 147e07d3a2b6ed8aad20af4ae9af3e28f17beb10.

--- a/drivers/mihw/Kconfig
+++ b/drivers/mihw/Kconfig
@@ -5,7 +5,7 @@ config MILLET
 	  Mi frozen function
 
 config MIGT
-	bool "smart sched"
+        bool "boost cpufreq when load high"
 	depends on MIHW
-	help
-	  Boost cpufreq when current frame drawing time too long
+        help
+          Boost cpufreq when current frame drawing time too long
