--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -629,6 +629,8 @@ config XLOGCHAR
 	help
 	  Implements a high performance log driver
 
+source "drivers/char/lrng/Kconfig"
+
 config RANDOM_TRUST_CPU
 	bool "Initialize RNG using CPU RNG instructions"
 	default y
